When the table content in the dashboard is too long, a horizontal scroll bar will appear to adjust to a new line display to ensure the display effect

--- a/frontend/src/metabase/css/core/box_sizing.css
+++ b/frontend/src/metabase/css/core/box_sizing.css
@@ -16,6 +16,8 @@ ul,
 li,
 span {
   box-sizing: border-box;
+  text-wrap: wrap;
+  line-height: normal;
 }
 
 /* for applying border-box to other elements on ad-hoc basis */
